--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get_it: ^7.2.0
+  provider: ^6.0.1
+  shared_preferences: ^2.0.11
+  flutter_rating_bar: ^4.0.0
+  date_time_picker: ^2.1.0
+  intl: ^0.17.0
+  get_storage: ^2.0.3
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
